5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_1949.log
== SUBMITION (2019-04-30 12:13:20) 
-- CODE:
a=int(input())
b=int(input())
c=a//10
d=a%10
e=b//10
f=b%10

if(a==b):
	print("Ganhou R$ 100.000,00")
elif(c==f and d==e):
	print("Ganhou R$ 50.000,00"")
elif(c==e or c==f or d==e or d==f):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.161287
-- ERROR:
  File "/home/codebench/codes/1675/1949/main.py", line 11
    print("Ganhou R$ 50.000,00"")
                                ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:13:23) 
-- CODE:
a=int(input())
b=int(input())
c=a//10
d=a%10
e=b//10
f=b%10

if(a==b):
	print("Ganhou R$ 100.000,00")
elif(c==f and d==e):
	print("Ganhou R$ 50.000,00"")
elif(c==e or c==f or d==e or d==f):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- ERROR:
File "XXXX", line 11
    print("Ganhou R$ 50.000,00"")
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:13:33) 
-- CODE:
a=int(input())
b=int(input())
c=a//10
d=a%10
e=b//10
f=b%10

if(a==b):
	print("Ganhou R$ 100.000,00")
elif(c==f and d==e):
	print("Ganhou R$ 50.000,00")
elif(c==e or c==f or d==e or d==f):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.221734
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
